# Clew

./: CONTRIBUTING.md  LICENSE  README.md  index.html
clew-source/: .gitignore  QUICKSTART.md  pyproject.toml  requirements.txt  setup.py
clew-source/assets/: logo.icns
clew-source/clew/: BUGFIXES_1_3_4_5_README.md  __init__.py  __main__.py  agent_runtime.py  api_server.py  app.py  auto_router.py  auto_updater.py  code_viewer.py  context_manager.py  diff_service.py  git_service.py  lsp_client.py  main_window.py  mcp_client.py  mcp_manager.py  memory_service.py  project_context.py  quota.py  skill_loader.py  token_tracker.py  utils.py  web_bridge.py
clew-source/clew/assets/: logo.icns
clew-source/clew/plugins/: __init__.py  _example.py
clew-source/clew/providers/: __init__.py  anthropic.py  base.py  cerebras.py  deepseek.py  fireworks.py  gemini.py  groq.py  lmstudio.py  mistral.py  ollama.py  openai_compat.py  openai_provider.py  openrouter.py  registry.py  sambanova.py  together.py  xai.py  zai.py
clew-source/clew/templates/: my_custom.json
clew-source/clew/web/: app.js  index.html  style.css
